# ZUOLANDAPLINK

./: .gitignore  99-zuolan-daplink.rules  CHANGELOG.md  CLAUDE.md  README.md  index.html  install-udev-rules.sh  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.node.json
.github/: latest.json.template
.github/workflows/: release.yml
docs/: QUICK_START.md  README.md  RTT_CHART_GUIDE.md  RTT_CHART_OPTIMIZATION_SUMMARY.md  RTT_CHART_SMART_ENABLE.md  RTT_USER_MANUAL.md  RTT_XY_SCATTER_GUIDE.md  UPDATE_GUIDE.md  UPDATE_SETUP.md  VERSION_0.4.0_SUMMARY.md
src/: App.tsx  index.css
src-tauri/: Cargo.toml  check_targets.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: app_config.rs  error.rs  lib.rs  main.rs  state.rs  udev.rs
src-tauri/src/commands/: config.rs  flash.rs  memory.rs  mod.rs  probe.rs  rtt.rs  serial.rs
src-tauri/src/pack/: flash_algo.rs  manager.rs  mod.rs  parser.rs  paths.rs  progress.rs  scan_report.rs  target_gen.rs
src-tauri/src/serial/: local.rs  mod.rs  tcp.rs
src-tauri/tests/: pack_parsing_test.rs
src/components/: UpdateChecker.tsx
src/components/config/: PackManager.tsx
src/components/dialogs/: EraseDialog.tsx  UdevPermissionDialog.tsx
src/hooks/: useRttEvents.ts  useSerialEvents.ts  useUserActivity.ts
src/lib/: chartAutoConfig.ts  chartTypes.ts  parseChartData.ts  rttColorParser.ts  serialTypes.ts  tauri.ts  types.ts  utils.ts
src/stores/: appStore.ts  chipStore.ts  flashStore.ts  logStore.ts  probeStore.ts  rttStore.ts  serialStore.ts
(+35 files in other folders)
