[package]
name = "zuolandaplink"
version = "0.5.2"
description = "DAPLINK RTTVIEW"
authors = ["zuolan"]
edition = "2021"

[lib]
name = "zuolandaplink_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
probe-rs = "0.27"
quick-xml = { version = "0.37", features = ["serialize"] }
thiserror = "2"
tokio = { version = "1", features = ["full"] }
parking_lot = "0.12"
log = "0.4"
env_logger = "0.11"
zip = "2"
directories = "5"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
object = "0.36"
base64 = "0.22"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
